# web-sim-test

./: asset-manifest.json  index.html  package-lock.json  package.json
public/: index.html
rust-web-sim/: Cargo.toml
rust-web-sim/src/: demo_scene.rs  lib.rs  main.rs
simulator/: Cargo.toml  LICENSE_MIT  rust-toolchain.toml
simulator/src/: demo_scene.rs  lib.rs
src/: App.tsx
static/js/: 787.050da235.chunk.js  787.050da235.chunk.js.map  main.cdb6eb90.js  main.cdb6eb90.js.map  main.e18f76b3.js  main.e18f76b3.js.map
