[package]
name = "rust-web-sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.10.1"
wasm-bindgen = "0.2.87"
kesko = { path = "../../../kesko/kesko" }
kesko_object_interaction = { path = "../../../kesko/kesko/crates/kesko_object_interaction" }
console_error_panic_hook = "0.1.7"
